--- a/Oracle/Loungers_Trojan.yaml
+++ b/Oracle/Loungers_Trojan.yaml
@@ -5,60 +5,60 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: vpnu.loungers.cc:443, server: vpnu.loungers.cc, port: 443, type: trojan, password: a1b2c3d4..., sni: vpnu.loungers.cc, udp: true}
-  - {name: blog.loungers.cc:443, server: blog.loungers.cc, port: 443, type: trojan, password: a1b2c3d4..., sni: blog.loungers.cc, udp: true}
-  - {name: cloud.loungers.cc:443, server: cloud.loungers.cc, port: 443, type: trojan, password: a1b2c3d4..., sni: cloud.loungers.cc, udp: true}
+  - {name: vpnu.dawpp.com:443, server: vpnu.dawpp.com, port: 443, type: trojan, password: a1b2c3d4..., sni: vpnu.dawpp.com, udp: true}
+  - {name: blog.dawpp.com:443, server: blog.dawpp.com, port: 443, type: trojan, password: a1b2c3d4..., sni: blog.dawpp.com, udp: true}
+  - {name: cloud.dawpp.com:443, server: cloud.dawpp.com, port: 443, type: trojan, password: a1b2c3d4..., sni: cloud.dawpp.com, udp: true}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -81,9 +81,9 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - vpnu.loungers.cc:443
-      - blog.loungers.cc:443
-      - cloud.loungers.cc:443
+      - vpnu.dawpp.com:443
+      - blog.dawpp.com:443
+      - cloud.dawpp.com:443
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
